# multicourse-project-m2-last

./: .gitignore  Home.py  INSTRUCTIONS.md  Makefile  README.md  app.py  load_data.py  pipeline.py  pyproject.toml  rapport.docx
data/: README.md  data_to_rdf.py  full_knowledge_graph.ipynb  generate_users.py  phones.json  preprocess.py  prices.json  rml_mappings.ttl  users.json  variants.json
data/articles/: example_1.txt  review_pixel_8a.txt
data/preprocessed/: phones_configuration.json  review_sentiments.json  store_prices.json
data/raw_pretty/: phones.json  review_tags.json  variants.json
data/rdf/: knowledge_graph_full.ttl
data/users/: dataset_stats.json
kg/queries/: cq2_user_recommendations.rq  cq3_user_profile_construction.rq  cq4_phone_comparison.rq  cq5_search_phones_by_criteria.rq  cq6_user_update_interests.rq  cq7_user_delete.rq  (+2 more)
knowledge_graph/: facts.ttl  linkage.ttl  smartphone-shacl.ttl  smartphone-skos.ttl  smartphone.ttl
mapper/: data.ttl
ontology/: owl.ttl  shacl.ttl  skos.ttl
pages/: 0_Explore_Phones.py  0_Recommandation.py  1_Embeddings_RAG.py  1_Explore_Phones.py  2_NL_to_SPARQL.py
queries/: SPARQL_PATTERNS.md  cq1_federated_brand_info.rq  cq2_best_sentiment_phones.rq  cq3_inference_based_recommendation.rq  cq4_camera_comparison.rq  cq5_multi_criteria_recommendation.rq
rml_mappings/: smartphone-rml.ttl
scripts/: build_kg.sh  extract_usecases.py  generate_facts.py  link_brands.py  materialize.py  materialize_inferences.py  semi_auto_align.py
src/: agents.py  kg_build_pipeline.py  llm.py  prompts.py
streamlite/: Home.py
(+63 files in other folders)
