[project]
name = "multicourse-project-m2-last"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub[pandas-datasets]>=0.4.0",
    "pandas>=2.3.3",
    "rdflib>=7.0.0",
    "ipykernel>=7.1.0",
    "pydantic>=2.12.5",
    "owlrl>=6.0.0",
    "sentence-transformers>=2.2.0",
    "requests>=2.31.0",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "bs4>=0.0.2",
]
